# chemtools

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  template.env
chemtools-api/: .env.template  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
chemtools-api/src/: containers.py  main.py  settings.py
chemtools-api/src/api/: enums.py
chemtools-api/src/api/controllers/: __init__.py  charge_controller.py  index_controller.py  io_controller.py  system_controller.py
chemtools-api/src/api/models/: __init__.py  charge.py  upload.py
chemtools-api/src/clients/: __init__.py  base_client.py  chemtools_manager_client.py
chemtools-api/src/conf/: logging.yml
chemtools-api/src/db/: enums.py
chemtools-api/src/db/migrations/models/: 0_20241108153035_init.py
chemtools-api/src/db/models/: __init__.py  calculation_result.py  user.py
chemtools-api/src/services/: base_service.py
chemtools-manager/: .env.template  .gitignore  README.md  alembic.ini  docker-compose.yml  mole_usage.txt  pyproject.toml
chemtools-manager/src/: app.py  containers.py  main.py  utils.py  worker.py
chemtools-manager/src/api/: enums.py
chemtools-manager/src/clients/: __init__.py  fetcher_client.py
chemtools-manager/src/conf/: const.py  logger.yml  logging.yml  settings.py
chemtools-manager/src/db/: database.py
chemtools-manager/src/services/: __init__.py  calculation_service.py  data_fetcher_service.py  file_storage_service.py  filesystem_storage_service.py  message_broker_service.py  minio_storage_service.py  user_service.py
chemtools-manager/src/tools/: __init__.py  base_dockerized_tool.py  chargefw2_tool.py  gesamt_tool.py  mole2_tool.py
src/: app.py  containers.py  di_containers.py  utils.py  worker.py
src/api/: enums.py
src/api/routers/: __init__.py  (+7 more)
src/clients/: fetcher_client.py
src/conf/: const.py  settings.py
src/db/: database.py
src/services/: __init__.py  calculation_service.py  data_fetcher_service.py  file_cache_service.py  file_storage_service.py  filesystem_storage_service.py  healthcheck_service.py  message_broker_service.py  minio_storage_service.py  pipeline_item_service.py  pipeline_service.py  user_service.py  worker_service.py
src/tests/: conftest.py
src/tools/: __init__.py  base_dockerized_tool.py  chargefw2_tool.py  dockerized_tool_base.py  gesamt_tool.py  mole2_tool.py
(+87 files in other folders)
